# aiven-rs

./: BUILD_STATUS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: linters.yml  linux.yml  mac.yml  windows.yml
examples/: clouds.rs  clouds_smol.rs  list_service_integration.rs  projects.rs  user_auth.rs
src/: customdeser.rs  errors.rs  lib.rs  response.rs  testutil.rs
src/account/: api.rs  mod.rs  types.rs
src/billing/: api.rs  mod.rs  types.rs
src/billing_group/: api.rs  mod.rs  types.rs
src/client/: aiven_client.rs  http_client.rs  mod.rs
src/cloud/: api.rs  mod.rs  types.rs
src/cmd/: account.rs  cloud.rs  main.rs  table.rs
src/key_mgmt/: api.rs  mod.rs  types.rs
src/payment/: api.rs  mod.rs  types.rs
src/project/: api.rs  mod.rs  types.rs
src/service/: api.rs  api_elasticsearch.rs  api_integrations.rs  api_kafka.rs  api_mirrormaker.rs  api_mysql.rs  api_postgres.rs  mod.rs  types_elasticsearch.rs  types_integrations.rs  types_kafka.rs  types_mirrormaker.rs  types_mysql.rs  types_postgres.rs  types_service.rs
src/ticket/: api.rs  mod.rs  types.rs
src/user/: api.rs  mod.rs  types.rs
tests/testdata/account/: auth_methods.json  confirm_account_team_invite.json  create_new.json  create_team.json  get_auth_details.json  get_details.json  get_team_details.json  list_accessible_accounts.json  list_events.json  list_pending_invites.json  list_projects.json  list_projects_by_team.json  list_projects_by_user.json  list_team_members.json  list_teams.json  list_teams_for_project.json  list_teams_for_user.json  new_auth_method.json  search_users.json  update_account.json  update_auth_method.json  update_team_details.json
tests/testdata/billing_group/: billing_group_associated_projects.json  billing_group_details.json  billing_group_get_invoice_lines.json  billing_group_get_invoices.json  billing_group_get_single_invoice.json  billing_group_update.json  claim_credit_code.json  create_billing_group.json  list_billing_group_credits.json  list_billing_group_events.json  list_billing_groups.json
tests/testdata/cloud/: list_by_project.json
tests/testdata/key_mgmt/: retrieve_ca_cert.json
tests/testdata/payment/: list_cards.json  update_card.json
tests/testdata/project/: create_project.json  delete_peering_connection.json  delete_peering_connection_with_region.json  delete_project_vpc.json  get_event_log_entries.json  get_vpc_info.json  list_active_alerts.json  list_project_vpc.json  list_projects.json  list_users_for_project.json
tests/testdata/project_billing/: claim_credit_code.json  list_project_credits.json  list_project_invoices.json
tests/testdata/service/elasticsearch/: list.json  show_acl_config.json
tests/testdata/service/integrations/: create_endpoint.json  get_service_integration.json  list_integration_endpoint_types.json  list_integration_for_service.json  list_service_integration_eps.json  list_service_integration_types.json
tests/testdata/service/kafka/: check_compatibility_schema_registry.json  create_kafka_connector.json  delete_acl_entry.json  edit_kafka_connector.json  get_kafka_connect_configuration_schema.json  get_kafka_connect_connectors.json  get_kafka_connect_status.json  get_schema_registry_subject_versions.json  get_topic_info.json  get_topic_list.json  list_kafka_connectors.json  list_schema_registry_subjects.json  list_topic_messages.json  produce_message.json
tests/testdata/ticket/: all_tickets.json  create.json
tests/testdata/user/: accept_all_invites_for_account.json  auth_login_options.json  authenticate.json  check_password_strength_existing_user.json  check_password_strength_new_user.json  complete_otp_config.json  configure_2fa.json  confirm_user_email.json  create_access_token.json  create_user.json  current_user_info.json  list_all_access_tokens.json  list_linked_auth_methods.json  password_change.json  reject_invite_to_team.json  update_token.json
(+12 files in other folders)
