[package]
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
categories = ["sdk", "aiven", "cloud", "infra"]
description = "This is a rust sdk to interact with aiven-cloud apis."
documentation = "https://docs.rs/aiven-rs"
edition = "2018"
homepage = "https://github.com/ansrivas/aiven-rs"
keywords = ["sdk", "aiven", "cloud", "infra"]
license = "MIT"
name = "aiven_rs"
readme = "README.md"
repository = "https://github.com/ansrivas/aiven-rs"
version = "0.3.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }

env_logger = "0.8"
log = "0.4"
percent-encoding = "2.1.0"

serde_json = "1.0"

thiserror = "1.0"
url = "2.1"
bytes= "0.5.4"
once_cell= "1.5"
mockito = "0.28.0"

serde_bytes = "0.11"

[dependencies.reqwest]
features = ["json"]
version = "0.10.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.106"


[dev-dependencies.smol]
version = "1.0.0"



[dev-dependencies.tokio]
features = ["blocking", "macros", "rt-core", "time", "stream", "sync"]
version = "0.2.21"

[dev-dependencies]
anyhow = "1.0.31"
async-compat = "0.1.3"


[features]
static=["openssl"]

[lib]
name = "aiven_rs"
path = "src/lib.rs"

# https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1
