[package]
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
categories = ["api-bindings", "asynchronous", "cloud", "infra"]
description = "This is a rust sdk to interact with aiven-cloud apis."
documentation = "https://docs.rs/aiven-rs"
edition = "2018"
homepage = "https://github.com/ansrivas/aiven-rs"
keywords = ["sdk", "aiven", "cloud", "infra"]
license = "MIT"
name = "aiven_rs"
readme = "README.md"
repository = "https://github.com/ansrivas/aiven-rs"
version = "0.4.1"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
tracing = "0.1"

percent-encoding = "2.1.0"

serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
url = "2.1"
bytes= "1.0"

serde_bytes = "0.11"

once_cell= {version = "1.5"}
mockito = {version = "0.30"}
tracing-subscriber = {version = "0.3"} 

[dependencies.reqwest]
default-features=false
features = ["json", "rustls-tls"]
version = "0.11"

[dev-dependencies]
anyhow = "1.0"
async-compat = "0.2.0"
tokio = {version="1", features = ["full"]}
smol = "1.2.5"

[lib]
name = "aiven_rs"
path = "src/lib.rs"

# https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1
